--- a/lesson1/04/sample01.html
+++ b/lesson1/04/sample01.html
@@ -5,8 +5,11 @@
 	<title>title</title>
 </head>
 <body>
+	<div id="title"></div>
 	<script src="sample01.js"></script>
 	<script src="sample02.js"></script>
 	<script src="sample03.js"></script>
+	<script src="sample04.js"></script>
+	<script src="sample05.js"></script>
 </body>
 </html>
