--- a/lesson2/01/sample01.html
+++ b/lesson2/01/sample01.html
@@ -5,7 +5,6 @@
 	<title>title</title>
 </head>
 <body>
-	<div id="title"></div>
 	<script src="sample01.js"></script>
 	<script src="sample02.js"></script>
 	<script src="sample03.js"></script>
@@ -14,5 +13,7 @@
 	<script src="sample06.js"></script>
 	<script src="sample07.js"></script>
 	<script src="sample08.js"></script>
+	<script src="sample09.js"></script>
+	<script src="sample10.js"></script>
 </body>
 </html>
