--- a/lesson2/04/01/sample01.html
+++ b/lesson2/04/01/sample01.html
@@ -7,5 +7,7 @@
 <body>
 	<script src="sample01.js"></script>
 	<script src="sample02.js"></script>
+	<script src="sample03.js"></script>
+	<script src="sample04.js"></script>
 </body>
 </html>
