--- a/lesson4/03/02/sample01.html
+++ b/lesson4/03/02/sample01.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <div id="app">
-    {{ message }}
+    <a v-bind:href="href">vue.js</a>
+    <a :href="href">vue.js</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
   <script src="sample01.js"></script>
